# QtKinectis

./: .CMakeLists.txt.swp  .gitignore  CMakeLists.txt  gpl.txt  readme.md
include/: argparser.hpp  compress.hpp  convertcloud.hpp  eventlistener.hpp  grabber.hpp  grabber_impl.hpp  io_cloud.hpp  iocloud.hpp  logger.hpp  network.hpp  outlierremoval.hpp  qtvisualizer.h  registration.hpp  resampling.hpp
optional/: f2g.desktop
src/: argparser.cpp  compress.cpp  convertcloud.cpp  eventlistener.cpp  grabber.cpp  grabber_impl.cpp  init.cpp  io_cloud.cpp  iocloud.cpp  logger.cpp  main.cpp  network.cpp  outlierremoval.cpp  qtinit.cpp  qtvisualizer.cpp  qtvisualizer.h  qtvisualizer.ui  registration.cpp  resampling.cpp
ui/: qtvisualizer.ui
